# Proyecto1-Datos2

./: README.md
GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h  LinkedList.h  Node.h
Server/: CMakeLists.txt  main.cpp
Server/messages/: ServerApp.cpp  ServerApp.h
Server/messages/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h  LinkedList.h  Node.h  VsPointer.h
Server/messages/json/: VsPointer.h  dataJsonClass.cpp  dataJsonClass.h  jsonMachine.cpp  jsonMachine.h  jsonSerializable.h
Server/network/: ServerListener.cpp  ServerListener.h
VSPointer/: CMakeLists.txt  LinkedList.h  Node.h  VsPointer.h  VsPointer.hpp  main.cpp
VsCodeMem/: CMakeLists.txt  library.h
VsCodeMem/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h  LinkedList.h  Node.h
VsCodeMem/VsPtr/: VsPointer.h
VsCodeMem/client/: ClientApp.cpp  ClientApp.h
VsCodeMem/client/JSON/: jsonSerialize.cpp  jsonSerialize.h
VsCodeMem/client/network/: ConnectServer.cpp  ConnectServer.h
VsPtr/: VsPointer.h
client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  main.cpp
client/JSON/: Nodo.h  jsonSerialize.cpp  jsonSerialize.h
client/client/: ClientApp.h
client/json/: jsonSerialize.cpp  jsonSerialize.h
client/network/: ClientApp.cpp  ClientApp.h  ConnectServer.cpp  ConnectServer.h
html/: _connect_server_8h_source.html  _garbage_collector_8cpp.html  _garbage_collector_8h.html  _garbage_collector_8h_source.html  _linked_list_8h.html  _linked_list_8h_source.html  _node_8h.html  _node_8h_source.html  _vs_pointer_8h.html  _vs_pointer_8h_source.html  annotated.html  class_client_app-members.html  class_client_app.html  class_connect_server-members.html  class_connect_server.html  class_garbage_collector-members.html  class_garbage_collector.html  class_linked_list-members.html  class_linked_list.html  class_node-members.html  class_node.html  classes.html  classjson_serialize.html  (+24 more)
(+81 files in other folders)
